--- a/package.json
+++ b/package.json
@@ -4,25 +4,36 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:docs": "swagger-merger -i swagger/index.yaml -o swagger/bundle.yaml",
-    "start": "npm run build:docs && tsc && node dist/app.js",
-    "dev": "npm run build:docs && nodemon --exec ts-node src/app.ts"
+    "migrate": "env-cmd npx sequelize-cli db:migrate",
+    "migrate:rollback": "env-cmd npx sequelize-cli db:migrate:undo",
+    "build:docs": "swagger-merger -i src/swagger/index.yaml -o src/swagger/bundle.yaml",
+    "start": "npm run build:docs && tsc && node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/sequelize": "^4.28.19",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.2",
+    "sequelize-typescript": "^2.1.6",
     "swagger-ui-express": "^5.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "sequelize-cli": "^6.6.2",
+    "swagger-merger": "^1.5.4",
+    "ts-node": "^10.9.2"
   }
 }
