--- a/package.json
+++ b/package.json
@@ -8,32 +8,47 @@
     "migrate:rollback": "env-cmd npx sequelize-cli db:migrate:undo",
     "build:docs": "swagger-merger -i src/swagger/index.yaml -o src/swagger/bundle.yaml",
     "start": "npm run build:docs && tsc && node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "npm run build:docs && nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/sequelize": "^4.28.19",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.8",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
+    "swagger-express-validator": "^1.0.2",
     "swagger-ui-express": "^5.0.0",
-    "typescript": "^5.3.3"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.14",
+    "@types/sequelize": "^4.28.19",
+    "@types/swagger-express-validator": "^1.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/winston": "^2.4.4",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
     "swagger-merger": "^1.5.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
