#TODO-3 --user login api

--- a/env.example
+++ b/env.example
@@ -1,5 +1,8 @@
 PORT=
+
 JWT_SECRET=
+JWT_ACCESS_EXPIRY=
+JWT_REFRESH_EXPIRY=
 
 DB_HOST=
 DB_PORT=
@@ -12,4 +15,5 @@ SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_SENDER=
+
 FRONTEND_URL=
