--- a/src/swagger/definitions/index.yaml
+++ b/src/swagger/definitions/index.yaml
@@ -8,3 +8,7 @@ Error:
   $ref: "./error.yaml"
 AccessTokenResponse:
   $ref: "./accessToken.response.yaml"
+Success:
+  $ref: "./success.yaml"
+PasswordReset:
+  $ref: "./passwordReset.yaml"
