--- a/src/swagger/paths/passwordReset.auth.yaml
+++ b/src/swagger/paths/passwordReset.auth.yaml
@@ -1,23 +1,18 @@
 post:
-  summary: "generate access token using refresh token"
+  summary: "password reset api"
   tags:
     - auth
   parameters:
     - in: body
-      name: refreshToken
-      description: refresh token
+      name: PasswordReset
+      description: password reset token and new password
       schema:
-        type: object
-        properties:
-          refreshToken:
-            type: string
-        required:
-          - refreshToken
+        $ref: "#/definitions/PasswordReset"
   responses:
     200:
-      description: "Access token generated success"
+      description: "Password reset successfully"
       schema:
-        $ref: "#/definitions/AccessTokenResponse"
+        $ref: "#/definitions/Success"
     400:
       description: "Bad request"
       schema:
