--- a/src/swagger/paths/signup.auth.yaml
+++ b/src/swagger/paths/signup.auth.yaml
@@ -12,15 +12,7 @@ post:
     201:
       description: "Register success"
       schema:
-        type: object
-        properties:
-          success:
-            type: boolean
-          data:
-            type: object
-            properties:
-              message:
-                type: string
+        $ref: "#/definitions/Success"
     400:
       description: "Bad request"
       schema:
