--- a/src/swagger/paths/index.yaml
+++ b/src/swagger/paths/index.yaml
@@ -6,3 +6,7 @@
   $ref: "./signin.auth.yaml"
 /auth/generate_access_token:
   $ref: "./accessToken.auth.yaml"
+/auth/forgot_password/{email}:
+  $ref: "./forgotPasssword.auth.yaml"
+/auth/reset_password:
+  $ref: "./passwordReset.auth.yaml"
