--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "firebase-admin": "^12.0.0",
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
