--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "files": ["src/types.d.ts"]
 }
