--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.8",
+    "openapi-validator-middleware": "^3.2.6",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
     "swagger-express-validator": "^1.0.2",
@@ -40,6 +42,7 @@
     "@types/express": "^4.17.21",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.10.6",
     "@types/nodemailer": "^6.4.14",
     "@types/sequelize": "^4.28.19",
