--- a/src/swagger/index.yaml
+++ b/src/swagger/index.yaml
@@ -21,6 +21,8 @@ securityDefinitions:
 
 definitions:
   $ref: "./definitions/index.yaml"
+parameters:
+  $ref: "./parameters/index.yaml"
 
 paths:
   $ref: "./paths/index.yaml"
