--- a/src/swagger/paths/index.yaml
+++ b/src/swagger/paths/index.yaml
@@ -14,4 +14,8 @@
   $ref: "./socialLogin.auth.yaml"
 
 /tasks:
-  $ref: "./createTask.yaml"
+  $ref: "./tasks.yaml"
+/tasks/{id}:
+  $ref: "./taskWithId.yaml"
+/tasks/{id}/completed:
+  $ref: "./completeTask.yaml"
