--- a/src/swagger/paths/index.yaml
+++ b/src/swagger/paths/index.yaml
@@ -19,3 +19,5 @@
   $ref: "./taskWithId.yaml"
 /tasks/{id}/completed:
   $ref: "./completeTask.yaml"
+/tasks/{id}/similar_tasks:
+  $ref: "./similarTask.yaml"
