--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bull-board": "^2.1.3",
+    "bullmq": "^5.1.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
@@ -27,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "openapi-validator-middleware": "^3.2.6",
     "sequelize": "^6.35.2",
@@ -44,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.6",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/sequelize": "^4.28.19",
     "@types/swagger-express-validator": "^1.0.2",
