--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "cross-env NODE_ENV=test && jest --config jest.config.ts",
     "migrate": "env-cmd npx sequelize-cli db:migrate",
     "migrate:rollback": "env-cmd npx sequelize-cli db:migrate:undo",
     "build:docs": "swagger-merger -i src/swagger/index.yaml -o src/swagger/bundle.yaml",
-    "start": "npm run build:docs && tsc && node dist/index.js",
-    "dev": "npm run build:docs && nodemon src/index.ts"
+    "start": "cross-env NODE_ENV=production && npm run build:docs && tsc && node dist/index.js",
+    "dev": "cross-env NODE_ENV=development && npm run build:docs && nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "bullmq": "^5.1.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
@@ -44,6 +46,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
@@ -51,12 +54,16 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/sequelize": "^4.28.19",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-express-validator": "^1.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
+    "supertest": "^6.3.3",
     "swagger-merger": "^1.5.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
