moved swagger in root directory

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cross-env NODE_ENV=test && jest --config jest.config.ts",
     "migrate": "env-cmd npx sequelize-cli db:migrate",
     "migrate:rollback": "env-cmd npx sequelize-cli db:migrate:undo",
-    "build:docs": "swagger-merger -i src/swagger/index.yaml -o src/swagger/bundle.yaml",
+    "build:docs": "swagger-merger -i swagger/index.yaml -o swagger/bundle.yaml",
+    "build":"tsc",
     "start": "cross-env NODE_ENV=production && npm run build:docs && tsc && node dist/index.js",
     "dev": "cross-env NODE_ENV=development && npm run build:docs && nodemon src/index.ts"
   },
