--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test && jest --config jest.config.ts",
-    "migrate": "env-cmd npx sequelize-cli db:migrate",
-    "migrate:rollback": "env-cmd npx sequelize-cli db:migrate:undo",
+    "test": "env-cmd --file ./.env.test jest --config jest.config.ts",
+    "migrate": "env-cmd --file ./.env.development npx sequelize-cli db:migrate",
+    "migrate:rollback": "env-cmd ./.env.development npx sequelize-cli db:migrate:undo",
     "build:docs": "swagger-merger -i swagger/index.yaml -o swagger/bundle.yaml",
     "build":"tsc",
-    "start": "cross-env NODE_ENV=production && npm run build:docs && tsc && node dist/index.js",
-    "dev": "cross-env NODE_ENV=development && npm run build:docs && nodemon src/index.ts"
+    "start": "npm run build:docs && tsc && env-cmd --file ./.env.production node dist/index.js",
+    "dev": "npm run build:docs && env-cmd --file ./.env.development nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
