--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "migrate": "env-cmd --file ./.env.development npx sequelize-cli db:migrate",
     "migrate:rollback": "env-cmd ./.env.development npx sequelize-cli db:migrate:undo",
     "build:docs": "swagger-merger -i swagger/index.yaml -o swagger/bundle.yaml",
-    "build":"tsc",
+    "build": "tsc",
     "start": "npm run build:docs && tsc && env-cmd --file ./.env.production node dist/index.js",
     "dev": "npm run build:docs && env-cmd --file ./.env.development nodemon src/index.ts"
   },
@@ -20,6 +20,7 @@
     "bull-board": "^2.1.3",
     "bullmq": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
