--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/js-yaml": "^4.0.9",
