--- a/swagger/bundle.yaml
+++ b/swagger/bundle.yaml
@@ -107,12 +107,19 @@ definitions:
         type: integer
       title:
         type: string
+      template_url:
+        type: string
       description:
         type: string
       due_at:
         type: string
       is_completed:
         type: integer
+      task_type:
+        type: string
+        enum:
+          - HTML
+          - TEXT
       user_id:
         type: integer
       completed_at:
@@ -128,12 +135,19 @@ definitions:
         type: integer
       title:
         type: string
+      template_url:
+        type: string
       description:
         type: string
       due_at:
         type: string
       is_completed:
         type: integer
+      task_type:
+        type: string
+        enum:
+          - HTML
+          - TEXT
       user_id:
         type: integer
       completed_at:
@@ -164,14 +178,23 @@ definitions:
     properties:
       title:
         type: string
+        description: required if task_type is TEXT
+      html:
+        type: string
+        description: required if task_type is TEXT
       description:
         type: string
       due_at:
         type: string
+      task_type:
+        type: string
+        enum:
+          - HTML
+          - TEXT
     required:
-      - title
       - description
       - due_at
+      - task_type
   TaskCountReport:
     type: object
     properties:
@@ -461,10 +484,23 @@ paths:
         - multipart/form-data
       parameters:
         - in: formData
+          name: task_type
+          type: string
+          enum:
+            - HTML
+            - TEXT
+          required: true
+        - in: formData
           name: title
           type: string
+          description: required if task_type is TEXT
           maxLength: 100
-          required: true
+          required: false
+        - in: formData
+          name: html
+          type: string
+          description: required if task_type is HTML
+          required: false
         - in: formData
           name: description
           type: string
