--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "openapi-validator-middleware": "^3.2.6",
+    "puppeteer": "^22.3.0",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
     "swagger-express-validator": "^1.0.2",
