--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
+    "node-mocks-http": "^1.14.1",
     "nodemon": "^3.0.2",
     "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.3",
