--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.8",
     "openapi-validator-middleware": "^3.2.6",
+    "pdfkit": "^0.14.0",
     "puppeteer": "^22.3.0",
     "sequelize": "^6.35.2",
     "sequelize-typescript": "^2.1.6",
@@ -58,6 +59,7 @@
     "@types/node": "^20.10.6",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/pdfkit": "^0.13.4",
     "@types/sequelize": "^4.28.19",
     "@types/supertest": "^6.0.2",
     "@types/swagger-express-validator": "^1.0.2",
