--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sequelize-typescript": "^2.1.6",
     "swagger-express-validator": "^1.0.2",
     "swagger-ui-express": "^5.0.0",
+    "twilio": "^5.0.0",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
